SFDCProject/src/objects/Contract_Pricing__c.object
<CustomObject>
    <description>Created as part of BSKY-6079 07/10/2015</description>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Storage System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microinverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Contract Pricing</relationshipLabel>
        <relationshipName>Contract_Pricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_on_Installation__c</fullName>
        <label>Tax on Installation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <label>Total Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Pricing</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Contract Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>